extensions/extSymbology/src/org/gvsig/symbology/fmap/rendering/filter/parser/ExpressionParser.java
/* Generated By:JavaCC: Do not edit this line. ExpressionParser.java */
/* gvSIG. Sistema de Informaci�n Geogr�fica de la Generalitat Valenciana
 *
 * Copyright (C) 2004 IVER T.I. and Generalitat Valenciana.
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307,USA.
 *
 * For more information, contact:
 *
 *  Generalitat Valenciana
 *   Conselleria d'Infraestructures i Transport
 *   Av. Blasco Ib��ez, 50
 *   46010 VALENCIA
 *   SPAIN
 *
 *      +34 963862235
 *   gvsig@gva.es
 *      www.gvsig.gva.es
 *
 *    or
 *
 *   IVER T.I. S.A
 *   Salamanca 50
 *   46005 Valencia
 *   Spain
 *
 *   +34 963163400
 *   dac@iver.es
 */
package org.gvsig.symbology.fmap.rendering.filter.parser;

import java.io.StringReader;
import java.util.ArrayList;
import java.util.Hashtable;
import java.util.Stack;

import org.gvsig.symbology.fmap.rendering.filter.operations.AddOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.AndOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.BooleanConstant;
import org.gvsig.symbology.fmap.rendering.filter.operations.EqOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.Expression;
import org.gvsig.symbology.fmap.rendering.filter.operations.ExpressionException;
import org.gvsig.symbology.fmap.rendering.filter.operations.GreaterThanOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.GreaterThanOrEqualsOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.LessThanOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.LessThanOrEqualsOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.MinusOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.NeOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.NotOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.NullConstant;
import org.gvsig.symbology.fmap.rendering.filter.operations.NumericalConstant;
import org.gvsig.symbology.fmap.rendering.filter.operations.OperatorsFactory;
import org.gvsig.symbology.fmap.rendering.filter.operations.OrOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.ReplaceOperator;
import org.gvsig.symbology.fmap.rendering.filter.operations.StringConstant;

import com.hardcode.gdbms.engine.values.Value;

/**
 * 
 * @author Pepe Vidal Salvador - jose.vidal.salvador@iver.es
 * 
 */
public class ExpressionParser implements ExpressionParserConstants {

	private Stack stack = new Stack();
	private static OperatorsFactory operators = OperatorsFactory.getInstance();
	private Hashtable<String, Value> symbols = new Hashtable<String, Value>();
	private ArrayList<String> classNames = new ArrayList<String>();

	public ArrayList<String> getClassNames() {
		return classNames;
	}

	public void addClassName(String name) {
		for (int i = 0; i < classNames.size(); i++) {
			if (classNames.get(i).compareTo(name) == 0)
				return;
		}
		classNames.add(name);
	}

	public Expression getExpression() {
		return (Expression) stack.pop();
	}

	public Stack getStack() {

		return this.stack;
	}

	public ExpressionParser(StringReader reader,
			Hashtable<String, Value> symbolsTable) {
		this(reader);
		this.symbols = symbolsTable;
	}

	public void putSymbol(String string, Value value) {
		this.symbols.put(string, value);
	}

	public static void main(String[] args) throws ParseException,
			ExpressionException {
		ExpressionParser parser = new ExpressionParser(new StringReader(
				"true && true"));
		parser.Expression();
		parser.getStack();
		Expression exp = parser.getExpression();

	}

	final public void Expression() throws ParseException {
		AndExpression();
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case OR:
				;
				break;
			default:
				jj_la1[0] = jj_gen;
				break label_1;
			}
			jj_consume_token(OR);
			AndExpression();
			Expression leftExpression = (Expression) stack.pop();
			Expression rightExpression = (Expression) stack.pop();

			Expression orExpr = new OrOperator(symbols);
			orExpr.addArgument(0, rightExpression);
			orExpr.addArgument(0, leftExpression);

			stack.push(orExpr);
		}
	}

	final public void AndExpression() throws ParseException {
		Token x;
		EqCompExpression();
		label_2: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case AND:
				;
				break;
			default:
				jj_la1[1] = jj_gen;
				break label_2;
			}
			x = jj_consume_token(AND);
			EqCompExpression();
			Expression rightExpression = (Expression) stack.pop();
			Expression leftExpression = (Expression) stack.pop();

			Expression func = new AndOperator(symbols);

			func.addArgument(0, rightExpression);
			func.addArgument(0, leftExpression);

			stack.push(func);
		}
	}

	final public void EqCompExpression() throws ParseException {
		Token x;
		ComparisonExpression();
		label_3: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case EQ:
			case NE:
				;
				break;
			default:
				jj_la1[2] = jj_gen;
				break label_3;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case EQ:
				x = jj_consume_token(EQ);
				break;
			case NE:
				x = jj_consume_token(NE);
				break;
			default:
				jj_la1[3] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			ComparisonExpression();
			Expression rightExpression = (Expression) stack.pop();
			Expression leftExpression = (Expression) stack.pop();
			Expression func = null;

			if (x.kind == EQ)
				func = new EqOperator(symbols);
			else if (x.kind == NE)
				func = new NeOperator(symbols);

			func.addArgument(0, rightExpression);
			func.addArgument(0, leftExpression);

			stack.push(func);
		}
	}

	final public void ComparisonExpression() throws ParseException {
		Token x;
		AdditiveExpression();
		label_4: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case GT:
			case LT:
			case LE:
			case GE:
				;
				break;
			default:
				jj_la1[4] = jj_gen;
				break label_4;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case LT:
				x = jj_consume_token(LT);
				break;
			case LE:
				x = jj_consume_token(LE);
				break;
			case GT:
				x = jj_consume_token(GT);
				break;
			case GE:
				x = jj_consume_token(GE);
				break;
			default:
				jj_la1[5] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			AdditiveExpression();
			Expression rightExpression = (Expression) stack.pop();
			Expression leftExpression = (Expression) stack.pop();
			Expression func = null;

			if (x.kind == LT)
				func = new LessThanOperator(symbols);
			else if (x.kind == LE)
				func = new LessThanOrEqualsOperator(symbols);
			else if (x.kind == GT)
				func = new GreaterThanOperator(symbols);
			else if (x.kind == GE)
				func = new GreaterThanOrEqualsOperator(symbols);

			func.addArgument(0, rightExpression);
			func.addArgument(0, leftExpression);

			stack.push(func);
		}
	}

	final public void AdditiveExpression() throws ParseException {
		Token x;
		MultiplicativeExpression();
		label_5: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case PLUS:
			case MINUS:
				;
				break;
			default:
				jj_la1[6] = jj_gen;
				break label_5;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case PLUS:
				x = jj_consume_token(PLUS);
				break;
			case MINUS:
				x = jj_consume_token(MINUS);
				break;
			default:
				jj_la1[7] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			MultiplicativeExpression();
			Expression rightExpression = (Expression) stack.pop();
			Expression leftExpression = (Expression) stack.pop();
			Expression func = null;

			if (x.kind == PLUS)
				func = new AddOperator(symbols);
			else
				func = new MinusOperator(symbols);

			func.addArgument(0, rightExpression);
			func.addArgument(0, leftExpression);

			stack.push(func);
		}
	}

	final public void MultiplicativeExpression() throws ParseException {
		Token x;
		UnaryElement();
		label_6: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case MULTIPLY:
			case DIVIDE:
				;
				break;
			default:
				jj_la1[8] = jj_gen;
				break label_6;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case MULTIPLY:
				x = jj_consume_token(MULTIPLY);
				break;
			case DIVIDE:
				x = jj_consume_token(DIVIDE);
				break;
			default:
				jj_la1[9] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			UnaryElement();
			try {
				Expression A = (Expression) stack.pop();
				Expression B = (Expression) stack.pop();
				boolean aInt = (((Expression) A).evaluate() instanceof Integer);
				boolean bInt = (((Expression) B).evaluate() instanceof Integer);
				if (aInt && bInt) {
					int a = (Integer) A.evaluate();
					int b = (Integer) B.evaluate();
					if (x.kind == MULTIPLY)
						stack.push(new NumericalConstant(new Integer(b * a),
								symbols));
					else
						stack.push(new NumericalConstant(new Integer(b / a),
								symbols));
				} else {

					double a = new Double(((Expression) A).evaluate()
							.toString());
					double b = new Double(((Expression) B).evaluate()
							.toString());
					if (x.kind == MULTIPLY)
						stack.push(new NumericalConstant(new Double(b * a),
								symbols));
					else
						stack.push(new NumericalConstant(new Double(b / a),
								symbols));
				}
			} catch (ClassCastException ex) {
				ex.printStackTrace();
			} catch (ExpressionException e) {
				e.printStackTrace();
			}
		}
	}

	final public void UnaryElement() throws ParseException {
		Token x = null;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case PLUS:
		case MINUS:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case PLUS:
				x = jj_consume_token(PLUS);
				break;
			case MINUS:
				x = jj_consume_token(MINUS);
				break;
			default:
				jj_la1[10] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			UnaryElement();
			try {
				Object A = stack.pop();
				if ((((Expression) A).evaluate() instanceof Integer)) {
					int a = (Integer) ((Expression) A).evaluate();
					if (x.kind == PLUS)
						stack.push(new NumericalConstant(new Integer(a),
								symbols));
					else
						stack.push(new NumericalConstant(new Integer(-a),
								symbols));
				} else {
					double a = (Double) ((Expression) A).evaluate();
					if (x.kind == PLUS)
						stack.push(new NumericalConstant(new Double(a), symbols));
					else
						stack.push(new NumericalConstant(new Double(-a),
								symbols));
				}
			} catch (ClassCastException ex) {
				ex.printStackTrace();
			} catch (ExpressionException ex) {
				ex.printStackTrace();
			}
			break;
		case NOT:
		case OPEN_SQ_BRACKETS:
		case OPEN_PARENTHESIS:
		case BOOLEAN:
		case NULL:
		case IDENTIFIER:
		case INTEGER:
		case FLOATING_POINT:
		case STRING:
			BooleanUnaryElement();
			break;
		default:
			jj_la1[11] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void BooleanUnaryElement() throws ParseException {
		Token t;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
			t = jj_consume_token(NOT);
			UnaryElement();
			Expression rightExpression = (Expression) stack.pop();
			Expression func = new NotOperator(symbols);
			func.addArgument(0, rightExpression);
			stack.push(func);
			break;
		case OPEN_SQ_BRACKETS:
		case OPEN_PARENTHESIS:
		case BOOLEAN:
		case NULL:
		case IDENTIFIER:
		case INTEGER:
		case FLOATING_POINT:
		case STRING:
			Element();
			break;
		default:
			jj_la1[12] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	final public void Element() throws ParseException {
		Token x;
		String y = "[$,A-Z,_,a-z]([$,A-Z,_,a-z]|[0-9])*";
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case OPEN_SQ_BRACKETS:
			jj_consume_token(OPEN_SQ_BRACKETS);
			x = jj_consume_token(IDENTIFIER);
			jj_consume_token(CLOSE_SQ_BRACKETS);
			ReplaceOperator func = new ReplaceOperator(symbols);
			func.addArgument(x.image);
			stack.push(func);
			addClassName(x.image);
			break;
		case INTEGER:
			x = jj_consume_token(INTEGER);
			NumericalConstant intC = new NumericalConstant(
					Integer.valueOf(x.image), symbols);
			stack.push(intC);
			break;
		case FLOATING_POINT:
			x = jj_consume_token(FLOATING_POINT);
			NumericalConstant doubleC = new NumericalConstant(
					Double.valueOf(x.image), symbols);
			stack.push(doubleC);
			break;
		case STRING:
			x = jj_consume_token(STRING);
			StringConstant stringValue = new StringConstant(x.image.substring(
					1, x.image.length() - 1), symbols);
			stack.push(stringValue);
			break;
		case BOOLEAN:
			x = jj_consume_token(BOOLEAN);
			BooleanConstant boolValue = new BooleanConstant(x.image, symbols);
			stack.push(boolValue);
			break;
		case NULL:
			x = jj_consume_token(NULL);
			NullConstant nullValue = new NullConstant(symbols);
			stack.push(nullValue);
			break;
		default:
			jj_la1[13] = jj_gen;
			if (jj_2_1(2)) {
				function();
			} else {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case OPEN_PARENTHESIS:
					jj_consume_token(OPEN_PARENTHESIS);
					Expression();
					jj_consume_token(CLOSE_PARENTHESIS);
					break;
				default:
					jj_la1[14] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
		}
	}

	final public void function() throws ParseException {
		String functionName;
		int argCount = 0;
		Expression function;
		Token x;
		if (jj_2_2(2)) {
			jj_consume_token(IDENTIFIER);
			functionName = token.image;
			argCount = Arguments();
			try {
				function = (Expression) operators.getOperator(functionName);
			} catch (Exception e) {
				{
					if (true)
						throw new ParseException("Problem with function '"
								+ functionName + "': " + e.toString());
				}
			}
			if (function == null) {
				if (true)
					throw new ParseException("Nonexisting function name '"
							+ functionName + "'");
			}
			for (int i = 0; i < argCount; i++) {
				Expression arg = (Expression) stack.pop();
				function.addArgument(0, arg);
			}
			stack.push(function);
		} else {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case IDENTIFIER:
				x = jj_consume_token(IDENTIFIER);
				StringConstant stringValue = new StringConstant(x.image,
						symbols);
				stack.push(stringValue);
				break;
			default:
				jj_la1[15] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
	}

	final public int Arguments() throws ParseException {
		int argCount = 0;
		jj_consume_token(OPEN_PARENTHESIS);
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case PLUS:
		case MINUS:
		case NOT:
		case OPEN_SQ_BRACKETS:
		case OPEN_PARENTHESIS:
		case BOOLEAN:
		case NULL:
		case IDENTIFIER:
		case INTEGER:
		case FLOATING_POINT:
		case STRING:
			argCount = ArgumentList();
			break;
		default:
			jj_la1[16] = jj_gen;
			;
		}
		jj_consume_token(CLOSE_PARENTHESIS);
		return argCount;
	}

	final public int ArgumentList() throws ParseException {
		int argCount = 0;
		Expression();
		argCount++;
		label_7: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case COMMA:
				;
				break;
			default:
				jj_la1[17] = jj_gen;
				break label_7;
			}
			jj_consume_token(COMMA);
			Expression();
			argCount++;
		}
		return argCount;
	}

	final private boolean jj_2_1(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_1();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(0, xla);
		}
	}

	final private boolean jj_2_2(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_2();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(1, xla);
		}
	}

	final private boolean jj_3R_9() {
		if (jj_scan_token(OPEN_PARENTHESIS))
			return true;
		return false;
	}

	final private boolean jj_3_1() {
		if (jj_3R_8())
			return true;
		return false;
	}

	final private boolean jj_3R_10() {
		if (jj_scan_token(IDENTIFIER))
			return true;
		return false;
	}

	final private boolean jj_3R_8() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3_2()) {
			jj_scanpos = xsp;
			if (jj_3R_10())
				return true;
		}
		return false;
	}

	final private boolean jj_3_2() {
		if (jj_scan_token(IDENTIFIER))
			return true;
		if (jj_3R_9())
			return true;
		return false;
	}

	public ExpressionParserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	public Token token, jj_nt;
	private int jj_ntk;
	private Token jj_scanpos, jj_lastpos;
	private int jj_la;
	public boolean lookingAhead = false;
	private boolean jj_semLA;
	private int jj_gen;
	final private int[] jj_la1 = new int[18];
	static private int[] jj_la1_0;
	static private int[] jj_la1_1;
	static {
		jj_la1_0();
		jj_la1_1();
	}

	private static void jj_la1_0() {
		jj_la1_0 = new int[] { 0x10000, 0x20000, 0x9000, 0x9000, 0x6600,
				0x6600, 0x60, 0x60, 0x180, 0x180, 0x60, 0x38280860, 0x38280800,
				0x18080000, 0x200000, 0x20000000, 0x38280860, 0x1000000, };
	}

	private static void jj_la1_1() {
		jj_la1_1 = new int[] { 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0,
				0x0, 0x0, 0xb, 0xb, 0xb, 0x0, 0x0, 0xb, 0x0, };
	}

	final private JJCalls[] jj_2_rtns = new JJCalls[2];
	private boolean jj_rescan = false;
	private int jj_gc = 0;

	public ExpressionParser(java.io.InputStream stream) {
		this(stream, null);
	}

	public ExpressionParser(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new ExpressionParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 18; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	public void ReInit(java.io.InputStream stream) {
		ReInit(stream, null);
	}

	public void ReInit(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream.ReInit(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 18; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	public ExpressionParser(java.io.Reader stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new ExpressionParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 18; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}
